fixed Login Layout issue

--- a/AssetManager.App.Web/Content/Site/login.less
+++ b/AssetManager.App.Web/Content/Site/login.less
@@ -1,4 +1,4 @@
-﻿@import "../bootstrap/mixins/custom.less";
+@import "../bootstrap/mixins/custom.less";
 
 body {
     margin: 0;
@@ -19,7 +19,7 @@ background-image: url('../Images/images-new.jpg');
         right: 0;
         float: right;
         height: 100%;
-        width: 500px;
+        max-width: 100%;
         margin: 0;
         padding: 0;
         z-index: 1;
